<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout
	android:id="@+id/widget0"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Inicia el ScrollView -->
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="590dp">
        <!-- Se colocal el LinearLayout que contendra el formulario -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

			<ImageView
			    android:id="@+id/imagenPersona"
			    android:layout_width="180dp"
			    android:layout_height="180dp"
			    android:layout_x="29dp"
			    android:layout_y="21dp"

				android:layout_gravity="center_horizontal" />

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<ImageButton
					android:id="@+id/botonAgregarImagenPersona"
					android:layout_width="60dp"
					android:layout_height="60dp"
					android:background="@drawable/registro"
					android:layout_marginLeft="120dp" />

				<ImageButton
					android:layout_width="60dp"
					android:layout_height="60dp"
					android:id="@+id/btnQuitar"
					android:background="@drawable/limpiar"
					android:layout_marginLeft="20dp"/>


			</LinearLayout>


			<EditText
			    android:id="@+id/editTextNombre"
			    android:layout_width="245dp"
			    android:layout_height="wrap_content"
				android:layout_marginTop="25dp"
			    android:ems="10"
			    android:hint="@string/editTextNombre"
			    android:textSize="18sp"
				android:layout_gravity="center"
				android:inputType="textPersonName" />
			<EditText
			    android:id="@+id/editTextCorreo"
			    android:layout_width="243dp"
			    android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:ems="10"
			    android:hint="@string/editTextCorreo"
			    android:textSize="18sp"
				android:inputType="textEmailAddress" />
			<EditText
			    android:id="@+id/editTextTelefono"
			    android:layout_width="244dp"
			    android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:ems="10"
			    android:hint="@string/editTextTelefono"
			    android:textSize="18sp"
				android:inputType="phone" />

			<EditText
				android:id="@+id/editTextDireccion"
				android:layout_width="244dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:ems="10"
				android:hint="@string/editTextDireccion"
				android:textSize="18sp" />

			<LinearLayout
			    android:orientation="horizontal"
           	 	android:layout_width="fill_parent"
            	android:layout_height="fill_parent">
			</LinearLayout>
		</LinearLayout>
	</ScrollView>

	<LinearLayout
android:orientation="horizontal"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_x="-30dp"
android:layout_y="453dp">

	</LinearLayout>

	<Button
android:id="@+id/botonLimpiar"
android:layout_width="match_parent"
android:layout_height="45dp"
android:layout_x="1dp"
android:layout_y="495dp"
android:text="@string/botonLimpiar"
		android:background="#a7c7dc" />

	<Button
android:id="@+id/botonGuardar"
android:layout_width="match_parent"
android:layout_height="45dp"
android:layout_x="0dp"
android:layout_y="443dp"
android:text="@string/botonGuardar"
		android:longClickable="false"
		android:background="#cdeb8b" />


</AbsoluteLayout>